src/main/java/compiladores/TP1Parser.java
// Generated from c:/Users/Usuario/Downloads/BaseCompiladores-master/src/main/java/compiladores/TP1.g4 by ANTLR 4.13.1
 
    package compiladores;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TP1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PuntoComa=1, ParAbierto=2, ParCerrado=3, LlaveAbierta=4, LlaveCerrada=5, 
		Asignacion=6, Coma=7, Suma=8, Resta=9, Multiplicacion=10, Division=11, 
		Modulo=12, CorcheteIzquierdo=13, CorcheteDerecho=14, Comparacion=15, Incrementador=16, 
		Decrementador=17, TipoDeDatos=18, NUMERO=19, Si=20, Sino=21, Para=22, 
		Mientras=23, Identificador=24, EspacioBlanco=25;
	public static final int
		RULE_programa = 0, RULE_instrucciones = 1, RULE_tipoinstruccion = 2, RULE_bloque = 3, 
		RULE_asignar = 4, RULE_para = 5, RULE_declaracionVariablelarar = 6, RULE_inicializar = 7, 
		RULE_incremento = 8, RULE_listaid = 9, RULE_llamadaFuncion = 10, RULE_definicionFuncion = 11, 
		RULE_parametrosdefuncion = 12, RULE_declaracionVariable = 13, RULE_mientras = 14, 
		RULE_si = 15, RULE_ipara = 16, RULE_comparar = 17, RULE_expresion = 18, 
		RULE_termino = 19, RULE_term = 20, RULE_factor = 21, RULE_exp = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "instrucciones", "tipoinstruccion", "bloque", "asignar", 
			"para", "declaracionVariablelarar", "inicializar", "incremento", "listaid", 
			"llamadaFuncion", "definicionFuncion", "parametrosdefuncion", "declaracionVariable", 
			"mientras", "si", "ipara", "comparar", "expresion", "termino", "term", 
			"factor", "exp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "'{'", "'}'", "'='", "','", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'['", "']'", null, "'++'", "'--'", null, null, 
			"'if'", "'else'", "'for'", "'while'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PuntoComa", "ParAbierto", "ParCerrado", "LlaveAbierta", "LlaveCerrada", 
			"Asignacion", "Coma", "Suma", "Resta", "Multiplicacion", "Division", 
			"Modulo", "CorcheteIzquierdo", "CorcheteDerecho", "Comparacion", "Incrementador", 
			"Decrementador", "TipoDeDatos", "NUMERO", "Si", "Sino", "Para", "Mientras", 
			"Identificador", "EspacioBlanco"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TP1.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TP1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TP1Parser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			instrucciones();
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionesContext extends ParserRuleContext {
		public TipoinstruccionContext tipoinstruccion() {
			return getRuleContext(TipoinstruccionContext.class,0);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterInstrucciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitInstrucciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LlaveAbierta:
			case TipoDeDatos:
			case Si:
			case Para:
			case Mientras:
			case Identificador:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				tipoinstruccion();
				setState(50);
				instrucciones();
				}
				break;
			case EOF:
			case LlaveCerrada:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoinstruccionContext extends ParserRuleContext {
		public AsignarContext asignar() {
			return getRuleContext(AsignarContext.class,0);
		}
		public DeclaracionVariablelararContext declaracionVariablelarar() {
			return getRuleContext(DeclaracionVariablelararContext.class,0);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public SiContext si() {
			return getRuleContext(SiContext.class,0);
		}
		public IparaContext ipara() {
			return getRuleContext(IparaContext.class,0);
		}
		public LlamadaFuncionContext llamadaFuncion() {
			return getRuleContext(LlamadaFuncionContext.class,0);
		}
		public TipoinstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoinstruccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterTipoinstruccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitTipoinstruccion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitTipoinstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoinstruccionContext tipoinstruccion() throws RecognitionException {
		TipoinstruccionContext _localctx = new TipoinstruccionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tipoinstruccion);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				asignar();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				declaracionVariablelarar();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				bloque();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(58);
				mientras();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(59);
				si();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(60);
				ipara();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(61);
				llamadaFuncion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BloqueContext extends ParserRuleContext {
		public TerminalNode LlaveAbierta() { return getToken(TP1Parser.LlaveAbierta, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LlaveCerrada() { return getToken(TP1Parser.LlaveCerrada, 0); }
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterBloque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitBloque(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitBloque(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bloque);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(LlaveAbierta);
			setState(65);
			instrucciones();
			setState(66);
			match(LlaveCerrada);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignarContext extends ParserRuleContext {
		public TerminalNode Identificador() { return getToken(TP1Parser.Identificador, 0); }
		public TerminalNode Asignacion() { return getToken(TP1Parser.Asignacion, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PuntoComa() { return getToken(TP1Parser.PuntoComa, 0); }
		public AsignarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterAsignar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitAsignar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitAsignar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignarContext asignar() throws RecognitionException {
		AsignarContext _localctx = new AsignarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_asignar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(Identificador);
			setState(69);
			match(Asignacion);
			setState(70);
			expresion();
			setState(71);
			match(PuntoComa);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParaContext extends ParserRuleContext {
		public AsignarContext asignar() {
			return getRuleContext(AsignarContext.class,0);
		}
		public IncrementoContext incremento() {
			return getRuleContext(IncrementoContext.class,0);
		}
		public List<TerminalNode> Identificador() { return getTokens(TP1Parser.Identificador); }
		public TerminalNode Identificador(int i) {
			return getToken(TP1Parser.Identificador, i);
		}
		public TerminalNode Comparacion() { return getToken(TP1Parser.Comparacion, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterPara(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitPara(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitPara(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParaContext para() throws RecognitionException {
		ParaContext _localctx = new ParaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_para);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				asignar();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				incremento();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				match(Identificador);
				setState(76);
				match(Comparacion);
				setState(77);
				match(Identificador);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(78);
				exp();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				term();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionVariablelararContext extends ParserRuleContext {
		public TerminalNode TipoDeDatos() { return getToken(TP1Parser.TipoDeDatos, 0); }
		public TerminalNode Identificador() { return getToken(TP1Parser.Identificador, 0); }
		public InicializarContext inicializar() {
			return getRuleContext(InicializarContext.class,0);
		}
		public ListaidContext listaid() {
			return getRuleContext(ListaidContext.class,0);
		}
		public TerminalNode PuntoComa() { return getToken(TP1Parser.PuntoComa, 0); }
		public DeclaracionVariablelararContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionVariablelarar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterDeclaracionVariablelarar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitDeclaracionVariablelarar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitDeclaracionVariablelarar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionVariablelararContext declaracionVariablelarar() throws RecognitionException {
		DeclaracionVariablelararContext _localctx = new DeclaracionVariablelararContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracionVariablelarar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(TipoDeDatos);
			setState(84);
			match(Identificador);
			setState(85);
			inicializar();
			setState(86);
			listaid();
			setState(87);
			match(PuntoComa);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicializarContext extends ParserRuleContext {
		public TerminalNode Asignacion() { return getToken(TP1Parser.Asignacion, 0); }
		public TerminalNode NUMERO() { return getToken(TP1Parser.NUMERO, 0); }
		public InicializarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicializar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterInicializar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitInicializar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitInicializar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicializarContext inicializar() throws RecognitionException {
		InicializarContext _localctx = new InicializarContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_inicializar);
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Asignacion:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(Asignacion);
				setState(90);
				match(NUMERO);
				}
				break;
			case PuntoComa:
			case ParCerrado:
			case Coma:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IncrementoContext extends ParserRuleContext {
		public TerminalNode Identificador() { return getToken(TP1Parser.Identificador, 0); }
		public TerminalNode Incrementador() { return getToken(TP1Parser.Incrementador, 0); }
		public TerminalNode Decrementador() { return getToken(TP1Parser.Decrementador, 0); }
		public IncrementoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_incremento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterIncremento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitIncremento(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitIncremento(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncrementoContext incremento() throws RecognitionException {
		IncrementoContext _localctx = new IncrementoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_incremento);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(Identificador);
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==Incrementador || _la==Decrementador) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaidContext extends ParserRuleContext {
		public TerminalNode Coma() { return getToken(TP1Parser.Coma, 0); }
		public TerminalNode Identificador() { return getToken(TP1Parser.Identificador, 0); }
		public InicializarContext inicializar() {
			return getRuleContext(InicializarContext.class,0);
		}
		public ListaidContext listaid() {
			return getRuleContext(ListaidContext.class,0);
		}
		public ListaidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterListaid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitListaid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitListaid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaidContext listaid() throws RecognitionException {
		ListaidContext _localctx = new ListaidContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listaid);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(Coma);
				setState(98);
				match(Identificador);
				setState(99);
				inicializar();
				setState(100);
				listaid();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LlamadaFuncionContext extends ParserRuleContext {
		public List<TerminalNode> TipoDeDatos() { return getTokens(TP1Parser.TipoDeDatos); }
		public TerminalNode TipoDeDatos(int i) {
			return getToken(TP1Parser.TipoDeDatos, i);
		}
		public TerminalNode Identificador() { return getToken(TP1Parser.Identificador, 0); }
		public TerminalNode ParAbierto() { return getToken(TP1Parser.ParAbierto, 0); }
		public TerminalNode ParCerrado() { return getToken(TP1Parser.ParCerrado, 0); }
		public TipoinstruccionContext tipoinstruccion() {
			return getRuleContext(TipoinstruccionContext.class,0);
		}
		public ParametrosdefuncionContext parametrosdefuncion() {
			return getRuleContext(ParametrosdefuncionContext.class,0);
		}
		public LlamadaFuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamadaFuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterLlamadaFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitLlamadaFuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitLlamadaFuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LlamadaFuncionContext llamadaFuncion() throws RecognitionException {
		LlamadaFuncionContext _localctx = new LlamadaFuncionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_llamadaFuncion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(TipoDeDatos);
			setState(106);
			match(Identificador);
			setState(107);
			match(ParAbierto);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TipoDeDatos) {
				{
				setState(108);
				match(TipoDeDatos);
				setState(109);
				parametrosdefuncion();
				}
			}

			setState(112);
			match(ParCerrado);
			setState(113);
			tipoinstruccion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionFuncionContext extends ParserRuleContext {
		public TerminalNode Identificador() { return getToken(TP1Parser.Identificador, 0); }
		public ListaidContext listaid() {
			return getRuleContext(ListaidContext.class,0);
		}
		public DefinicionFuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionFuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterDefinicionFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitDefinicionFuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitDefinicionFuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicionFuncionContext definicionFuncion() throws RecognitionException {
		DefinicionFuncionContext _localctx = new DefinicionFuncionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_definicionFuncion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(Identificador);
			setState(116);
			listaid();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosdefuncionContext extends ParserRuleContext {
		public List<DefinicionFuncionContext> definicionFuncion() {
			return getRuleContexts(DefinicionFuncionContext.class);
		}
		public DefinicionFuncionContext definicionFuncion(int i) {
			return getRuleContext(DefinicionFuncionContext.class,i);
		}
		public List<TerminalNode> Coma() { return getTokens(TP1Parser.Coma); }
		public TerminalNode Coma(int i) {
			return getToken(TP1Parser.Coma, i);
		}
		public ParametrosdefuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametrosdefuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterParametrosdefuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitParametrosdefuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitParametrosdefuncion(this);
			else return visitor.visitChildren(this);
		}
	}
